finished styling CSS page

--- a/main.css
+++ b/main.css
@@ -1,37 +1,39 @@
 h1 {
-    font-size: ;
-    font-family: ;
-    padding: ;
-    margin: ;
-    font-weight: ;
-    text-decoration: ;
-    color: ;
-    background-color: ;
+    font-size: 42px;
+    font-family: Lucida;
+    padding: 4px 2px;
+    margin: 0;
+    font-weight: bold;
+    text-decoration: underline;
+    color: black;
+    background-color: white;
+    text-align: center;
 }
 
 h2 {
-    font-size: ;
-    font-family: ;
-    padding: ;
-    margin: ;
-    font-weight: ;
-    color: ;
-    background-color: ;
+    font-size: 24px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 1em;
+    margin: 2%;
+    font-weight: thin;
+    color: black;
+    background-color: whitesmoke;
 }
 
 p {
-    font-family: ;
-    font-size: ;
-    padding: ;
-    margin: ;
-    color: ;
-    background-color: ;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 20px;
+    padding: 1em;
+    margin: 2%;
+    color: black;
+    background-color: whitesmoke;
+    text-align: center;
 }
 
 .logo {
     background-size: cover;
-    background-image: url();
-    background-color: ;
-    height: ;
-    width: ;
+    background-image: url(https://appacademy.github.io/styleguide/assets/logo/logo-emblem-black-1000.png);
+    background-color: white;
+    height: 50px;
+    width: 50px;
 }
